--- a/src/app/comun/index/index.component.html
+++ b/src/app/comun/index/index.component.html
@@ -1,4 +1,4 @@
-
+<!--Hola guapeton --> 
 <!-- Diseño Fondo --> 
 <video *ngIf="appService.dispositivo=='Desktop'" autoplay class="video-fondo" id="video-fondo" muted loop poster="assets/papiro.jpg">
   <source muted src="assets/videos/video-fondo.mp4" type="video/mp4"/>
