--- a/src/app/comun/index/index.component.html
+++ b/src/app/comun/index/index.component.html
@@ -1,10 +1,10 @@
-<!--Hola guapeton --> 
+
 <!-- Diseño Fondo --> 
-<video *ngIf="appService.dispositivo=='Desktop'" autoplay class="video-fondo" id="video-fondo" muted loop poster="assets/papiro.jpg">
+<video *ngIf="appService.dispositivo=='Desktop'" autoplay class="video-fondo" id="video-fondo" muted loop poster="assets/General/papiro.jpg">
   <source muted src="assets/videos/video-fondo.mp4" type="video/mp4"/>
 </video>
 
-<img src="assets/papiro.jpg" class="Fondo-papiro" alt="Fondo-papiro">
+<img src="assets/General/papiro.jpg" class="Fondo-papiro" alt="Fondo-papiro">
 
 <!-- Pantalla de Inicio --> 
 <div id="ContenedorInicio" class="ContenedorInicio visible">
@@ -22,10 +22,10 @@
   Sesión no iniciada</div>
   
   <div id="contenedorLogo"> 
-    <img class="animated Logo fadeIn" src="assets/Logo-Delirium3.png" alt="Delirium Logo"> 
+    <img class="animated Logo fadeIn" src="assets/General/Logo-Delirium3.png" alt="Delirium Logo"> 
   </div>
 
-  <img *ngIf="pantalla!='inicio'" id="flechaRetroceso" class="flechaRetroceso" alt="flecha" src="assets/Flecha.svg" (click)="retroceder()">
+  <img *ngIf="pantalla!='inicio'" id="flechaRetroceso" class="flechaRetroceso" alt="flecha" src="assets/General/Flecha.svg" (click)="retroceder()">
 
     <div *ngIf="!appService.claveValida" id="contenedorVerificacion" class="visible">
 
@@ -35,7 +35,7 @@
          <input #clave id="clave" class="inputClave Texto2" type="password" name="clave"  autofocus><br/>
          
          <button id="botonSubmit"  class="Texto2" (click)="$event.preventDefault(); checkClave();">
-           <img src="assets/boton2.png" id="botonAcceso">
+           <img src="assets/General/boton2.png" id="botonAcceso">
          </button>
          
       </form>
