Corrección de Bots con clases (Minotauro, Chronomante, Clerigo y Hechicero)

--- a/src/app/comun/developer-combate/developerCombate.component.html
+++ b/src/app/comun/developer-combate/developerCombate.component.html
@@ -100,7 +100,7 @@
 
     <div class="Accion-Turno-Heroe">
         <div class="Stats">
-            <img src="./assets/Clases/{{renderMazmorra.render.barraAccion.claseTurno.split(' ').join('_')}}.png" class="Imagen-Accion" />
+            <img src="./assets{{renderMazmorra.render.barraAccion.claseTurno.split(' ').join('_')}}.png" class="Imagen-Accion" />
             <div class="Texto-Nombre Texto2">{{renderMazmorra.render.barraAccion.nombreTurno}}</div>
             <div class="Barras-Vida-Mana-Heroe-Accion">
                 <div class="Container-Vida-Heroe">
