--- a/src/app/comun/sala/sala.component.html
+++ b/src/app/comun/sala/sala.component.html
@@ -41,10 +41,10 @@
   <div *ngIf="pantalla=='elegirClaseBot'" class="panelAddBot">
     <div class="contenedorElegirClaseBot Texto1">
       <div class="tituloElegirClaseBot">Elige una clase:</div>
-      <img class="imagenClaseBot" src="./assets/Clases/Guerrero.png" (click)="addBot('Guerrero')">
-      <img class="imagenClaseBot" src="./assets/Clases/Cruzado.png" (click)="addBot('Cruzado')">
+      <img class="imagenClaseBot" src="./assets/Clases/Druida.png" (click)="addBot('Minotauro')">
+      <img class="imagenClaseBot" src="./assets/Clases/Sacerdote.png" (click)="addBot('Clerigo')">
+      <img class="imagenClaseBot" src="./assets/Clases/Picaro.png" (click)="addBot('Chronomante')">
       <img class="imagenClaseBot" src="./assets/Clases/Hechicero.png" (click)="addBot('Hechicero')">
-      <img class="imagenClaseBot" src="./assets/Clases/Mago_de_sangre.png" (click)="addBot('Mago de sangre')">
       
       <!-- <img class="imagenClaseBot" src="./assets/Clases/Picaro.png" (click)="addBot('Picaro')">
       <img class="imagenClaseBot" src="./assets/Clases/Cazador.png" (click)="addBot('Cazador')">
