--- a/src/app/comun/heroes/heroes.component.sass
+++ b/src/app/comun/heroes/heroes.component.sass
@@ -53,7 +53,7 @@
   line-height: 10vh
 
 
-.contenedorPartidas 
+.contenedorHeroes
   position: relative
   overflow-y: auto
   overflow-x: hidden
@@ -77,7 +77,7 @@
   background-color: rgba(255,0,0,0.5)
 
 
-.panelPartidaNombre
+.panelPartidaImagen
   position: relative
   display: inline-flex
   height: 100%
@@ -86,6 +86,13 @@
   justify-content: center
   border-right: solid 1px
   margin-right: -1px
+  z-index: 6
+
+.ImagenPersonaje
+  position: absolute
+  width: 100%
+  height: 100%
+  z-index: 7
 
 
 .panelPartidaDescripcion
@@ -95,14 +102,14 @@
   height: 100%
 
 
-.panelPartidaClase
+.panelPartidaNombre
   display: flex
   align-items: center
   justify-content: center
   height: 50%
 
 
-.panelPartidaEspecializacion
+.panelPartidaPersonaje
   display: flex
   align-items: center
   justify-content: center
