--- a/src/app/comun/unirsePartida/unirsePartida.component.sass
+++ b/src/app/comun/unirsePartida/unirsePartida.component.sass
@@ -79,7 +79,7 @@
   background-color: rgba(255,0,0,0.5)
 
 
-.panelHeroeNombre
+.panelPartidaImagen
   position: relative
   display: inline-flex
   height: 100%
@@ -89,22 +89,28 @@
   border-right: solid 1px
   margin-right: -1px
 
+.ImagenPersonaje
+  position: absolute
+  width: 100%
+  height: 100%
+  z-index: 7
 
-.panelHeroeDescripcion
+
+.panelPartidaDescripcion
   display: inline-block
   vertical-align: top
   width: 70%
   height: 100%
 
 
-.panelHeroeClase
+.panelPartidaNombre
   display: flex
   align-items: center
   justify-content: center
   height: 50%
 
 
-.panelHeroeEspecializacion
+.panelPartidaPersonaje
   display: flex
   align-items: center
   justify-content: center
