--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -18,6 +18,7 @@ body
   font-family: 'Tangerine', cursive
   cursor: none
   overflow: hidden
+  cursor: url(../assets/Cursor/Metal_Norm.cur), pointer
 
 .Fondo-papiro
   position: fixed
