--- a/src/styles.sass
+++ b/src/styles.sass
@@ -14,6 +14,7 @@ body
 	padding: 0
 	overflow-x: hidden
 	overflow-y: hidden
+	cursor: url(assets/Cursor/Metal_Norm.cur), pointer
 
 .Texto1
 	font-size: 50px
