--- a/src/app/comun/developer-combate/developerCombate.component.sass
+++ b/src/app/comun/developer-combate/developerCombate.component.sass
@@ -393,7 +393,7 @@
 .Buffos-DeBuffos-Enemigo 
   position: absolute
   right: 0
-  bottom: 20%
+  top: 60%
   height: 32px
   width: 60%
   min-height: 32px 
