--- a/src/app/comun/interfaz/interfaz.component.sass
+++ b/src/app/comun/interfaz/interfaz.component.sass
@@ -6,7 +6,7 @@
 	width: 90vw
 	height: 90vh
 	padding: 5vh 5vw
-	z-index: 11
+	z-index: 20
 	pointer-events: none
 
 	div
@@ -42,11 +42,13 @@
 			margin-right: 2.5vw
 			margin-left: 2.5vw
 			outline: solid 1px white 
+			overflow: hidden
+			background-size: 1800%
 
 		.hechizo:hover
 			color: black
 			background-color: rgba(255,255,255,0.6)
-
+		
 	.botonCancelar
 		position: relative
 		margin-top: 5vh
