Actualización de mitad de parche.

--- a/src/app/comun/developer-combate/developerCombate.component.html
+++ b/src/app/comun/developer-combate/developerCombate.component.html
@@ -35,6 +35,13 @@
 
 <app-interfaz [renderMazmorra]="renderMazmorra"></app-interfaz>
 
+ 
+        <!--   ******************* -->
+        <!--    PANEL INFO HEROES        -->
+        <!--   ******************* -->
+
+<app-interfaz [renderMazmorra]="renderMazmorra"></app-interfaz>
+
         <!--   ******************* -->
         <!--     RNG PANEL         -->
         <!--   ******************* -->
