--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,12 +3,16 @@
 	font-family: "TangerineLocal"
 	src: url(./fonts/tangerine-font.woff2)
 
+	font-family: "GeographicaHandLocal"
+	src: url(./fonts/GeographicaHand.ttf)
+
 html
 	margin: 0
 	padding: 0
-	font-family: 'Tangerine','TangerineLocal', cursive
+	//font-family: 'Tangerine','TangerineLocal', cursive
+	font-family: 'GeograficaHandLocal'
 	overflow: hidden
-
+	color: #291905
 body
 	margin: 0
 	padding: 0
@@ -17,19 +21,19 @@ body
 	cursor: url(assets/Cursor/Metal_Norm.cur), pointer
 
 .Texto1
-	font-size: 50px
+	font-size: 40px
 	@media only screen and (min-width: 600px) //Pantallas mas de 600px
-		font-size: 60px
+		font-size: 50px
 
 .Texto2
-	font-size: 30px
-	@media only screen and (min-width: 600px)
-		font-size: 40px
-
-.Texto3
 	font-size: 20px
 	@media only screen and (min-width: 600px)
 		font-size: 30px
+
+.Texto3
+	font-size: 10px
+	@media only screen and (min-width: 600px)
+		font-size: 20px
 
 
 // Base de formatos:
