Versión 0.2.5 (Mid Cuarentena)

--- a/src/app/comun/heroes/heroes.component.html
+++ b/src/app/comun/heroes/heroes.component.html
@@ -25,7 +25,7 @@
   <div id="usuario" class="Texto2">{{validacion.nombre}}</div>
 
   <div *ngIf="pantalla=='seleccionHeroe'" class="contenedorHeroes">
-    <div *ngFor="let heroe of appService.perfil.heroes; let i = index" class="PanelHeroes" (click)="seleccionarHeroe(i)">
+    <div *ngFor="let heroe of appService.perfil.heroes; let i = index" class="PanelHeroes" (click)="seleccionarHeroe(i);">
       <div class="panelPartidaImagen Texto2">
         <img src="./assets/Clases/{{heroe.clase.charAt(0)+ heroe.clase.toLowerCase().slice(1)}}.png" class= "ImagenPersonaje" alt="Imagen-Personaje"/>
       </div>
