--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,6 @@
 
+@import "~jsoneditor/dist/jsoneditor.min.css";
+
 @font-face
 	font-family: "TangerineLocal"
 	src: url(./fonts/tangerine-font.woff2)
