--- a/src/app/comun/developer-combate/developerCombate.component.html
+++ b/src/app/comun/developer-combate/developerCombate.component.html
@@ -55,6 +55,12 @@
 <app-eventos></app-eventos>
 
         <!--   ******************* -->
+        <!--     INFO HEROES PANEL     -->
+        <!--   ******************* -->
+
+<appHeroesInfo></appHeroesInfo>
+
+        <!--   ******************* -->
         <!--   CONTENIDO PRINCIPAL -->
         <!--   ******************* -->
 <img *ngIf="developerCombateService.cargaCompleta" class="iconoAjustes" src="./assets/General/gear.png" (click)="developerCombateService.togglePause();">
@@ -74,7 +80,7 @@
                     <div class="barraAgro" [style.height]="renderizarAgroEnemigo(i)"></div>
                 </div>
                 <img src="./assets/Mazmorras/Marco2.png" class="Marco-Enemigo">
-                <img src="./assets/Enemigos/{{renderMazmorra.enemigos[i].nombre}}.png" class="Imagen-Enemigo"/>
+                <img src="./assets/Enemigos/{{renderMazmorra.enemigos[i].nombre.toLowerCase()}}.png" class="Imagen-Enemigo"/>
                 <appAnimacionEfecto #animacionEfecto [enemigo]="enemigo" [enemigoAnimacion]="enemigo.animacion"></appAnimacionEfecto>
                 <appAnimacionNumero #animacionNumero [enemigo]="enemigo" [enemigoVida]="enemigo.vida" [enemigoIndex]="i"></appAnimacionNumero>
             </div>
@@ -186,13 +192,13 @@
             HEROES TABLET Y DESKTOP
      ************************************************* -->
     <div *ngIf="appService.dispositivo!='Movil'" [ngClass]="'nHeroes'+renderMazmorra.heroes.length">
-        <div *ngFor="let heroes of renderMazmorra.heroes; let i = index" class="Panel Heroe" [ngClass]="renderizarMarcoHeroe(i)" >
+        <div *ngFor="let heroes of renderMazmorra.heroes; let i = index" class="Panel Heroe" [ngClass]="renderizarMarcoHeroe(i)" (click)="seleccionarHeroe(i);">
 
             <img src="./assets/Mazmorras/Marco-Heroe.png" class="Marco-Heroe">
             <div class="Nombre-Heroe Texto2">{{renderMazmorra.heroes[i].nombre}}</div>
             <div class="contenedorMarcoHeroe">
                 <img *ngIf="!sala.jugadores[i].online" src="./assets/General/disconected.svg" class="desconectado">
-                <img src="./assets/Clases/{{renderMazmorra.heroes[i].clase.split(' ').join('_')}}.png" class="Imagen-Heroe">
+                <img src="./assets/Clases/{{renderMazmorra.heroes[i].clase.split(' ').join('_').toLowerCase()}}.png" class="Imagen-Heroe">
                 <appAnimacionEfecto #animacionEfecto [heroe]="heroes" [heroeAnimacion]="heroes.animacion"></appAnimacionEfecto>
                 <appAnimacionNumero #animacionNumero [heroe]="heroes" [heroeVida]="heroes.vida" [heroeIndex]="i"></appAnimacionNumero>
                 <appMarcoClase #marcoClase [heroe]="heroes" [heroeIndex]="i"></appMarcoClase>
