--- a/src/app/comun/heroesInfo/heroesInfo.component.sass
+++ b/src/app/comun/heroesInfo/heroesInfo.component.sass
@@ -1,13 +1,11 @@
 
-
-  
 #contenedorHeroesInfo
   position: absolute
   width: 90%
   height: 90%
   left: 5%
   top: 5%
-  z-index: 10
+  z-index: 20
 
   .fondoPanel
     position: absolute
@@ -47,9 +45,9 @@
 
     .iconoClase
       position: absolute
-      width: 20%
-      top: 5%
-      left: 10%
+      width: 25%
+      top: 0
+      left: 0
       z-index: inherit
 
     .nombreClase
@@ -58,6 +56,7 @@
       width: 100%
       margin-top: 10%
       text-align: center
+      font-weight: bold
 
     .nombreJugador
       position: relative
@@ -177,6 +176,7 @@
         width: 90%
         margin-left: 5%
         margin-right: 5%
+        margin-top: 2%
 
       .contenedorHechizo
         position: relative
@@ -189,23 +189,32 @@
         margin-bottom: 2.5%
         .contenedorImagenHechizo
           position: relative
-          display: block
+          display: inline-block
           width: 10%
-          padding-top: 100%
-          .imagenHechizo
-            position: absolute
+
+          .contenedorImagenHechizoPadding
+            position: relative
             width: 100%
-            height: 100%
-            top: 0
-            border: solid black 2px
-            box-sizing: border-box
+            padding-top: 100%
+
+            .imagenHechizo
+              position: absolute
+              width: 100%
+              height: 100%
+              top: 0
+              border: solid black 2px
+              box-sizing: border-box
+
         .textoHechizo
           position: relative
           display: inline-block
           vertical-align: top
           height: 100%
           width: 78%
-          margin-left: 2%
+          margin-left: 5%
+          .nombreHechizo
+            display: inline-block
+            font-weight: bold
     
     //PANEL EQUIPO:
     .panelEquipo
