--- a/src/app/comun/unirsePartida/unirsePartida.component.html
+++ b/src/app/comun/unirsePartida/unirsePartida.component.html
@@ -32,7 +32,7 @@
   <div *ngIf="pantalla=='seleccionHeroe'" class="contenedorHeroes">
     <<div *ngFor="let heroe of appService.perfil.heroes; let i = index" class="PanelHeroes" (click)="seleccionarHeroe(i)">
       <div class="panelPartidaImagen Texto2">
-        <img src="./assets/Clases/{{heroe.clase.charAt(0)+ heroe.clase.toLowerCase().slice(1)}}.png" class= "ImagenPersonaje" alt="Imagen-Personaje"/>
+        <img src="./assets/Clases/{{heroe.clase.toLowerCase()}}.png" class= "ImagenPersonaje" alt="Imagen-Personaje"/>
       </div>
       <div class="panelPartidaDescripcion">
         <div class="panelPartidaNombre Texto2">{{heroe.nombre}}</div>
