--- a/src/app/comun/ajustes/ajustes.component.sass
+++ b/src/app/comun/ajustes/ajustes.component.sass
@@ -18,17 +18,144 @@
   background-color: rgba(black, 0.7)
   box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.5)
 
-  .AjustesTexto
-    position: relative
-    top: 20%
+.pestanaAjustes
+  position: relative
+  top: 10%
+  height: 80%
+  margin-top: 10px
+  text-align: left
+  overflow-y: scroll
+
+.mensajeTexto
+  position: relative 
+  margin: 10px 10%
+  text-align: start
+
+.textoModificador
+  position: relative 
+  width: 40%
+  margin-left: 10%
+  display: inline-block
+
+.titulo
+  position: absolute
+  top: 0
+  height: 10%
+  width: 97%
+  margin-right: 15px
+  display: flex
+  align-items: center
+  justify-content: center
+
+.titulo2
+  position: relative
+  text-align: center
+  margin: 10px 0
+
+.ajustesOpcion
+  position: absolute
+  width: 30%
+  height: 10%
+  bottom: 0
+  display: inline-flex
+  align-items: center
+  justify-content: center
+
+  color: white 
+.ajustesOpcion:hover
+    background-color: rgba(255, 255, 255, 0.2) 
     color: white
-    @media only screen and (min-width: 600px) //Pantallas mas de 600px
-      top: 30%
+.OK
+  right: 20%
+.Cancel
+  left: 20%
+
+/* Slider*/
+.slidecontainer
+  width: 30% /* Width of the outside container */
+  margin: 10px 0
+  display: inline-block
+
+
+/* The slider itself */
+.volSlider 
+  -webkit-appearance: none  /* Override default CSS styles */
+  appearance: none
+  width: 100% /* Full-width */
+  height: 15px /* Specified height */
+  border-radius: 5px
+  background: #d3d3d3 /* Grey background */
+  outline: none /* Remove outline */
+  opacity: 0.7 /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .1s /* 0.2 seconds transition on hover */
+  transition: opacity .2s
+
+/* Mouse-over effects */
+.volSlider:hover 
+  opacity: 1 /* Fully shown on mouse-over */
+
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.volSlider::-webkit-slider-thumb 
+  -webkit-appearance: none /* Override default look */
+  appearance: none
+  width: 25px /* Set a specific slider handle width */
+  height: 25px /* Slider handle height */
+  border-radius: 50%
+  background: #4CAF50 /* Green background */
+  cursor: pointer /* Cursor on hover */
+
+
+/* Toggle */
+$width: 40px
+$height: 20px
+
+.toggle-container
+  display: inline-block
+  margin: 10px 0
+  margin-left: 10%
+  vertical-align: middle
+  width: $width
+  height: $height
+  border: 3px solid #bfbebe
+  border-radius: $height
+  position: relative
+  cursor: pointer
+  background-color: #f5f2f2
+  transition: border-color 300ms
+
+  .real-checkbox
+    position: absolute
+    clip: rect(0,0,0,0)
+
+    & + .toggle-button
+      position: absolute
+      top: 0
+      left: 0
+      right: 0
+      bottom: 0
+      border-radius: 30px
+      transition: all 300ms
+
+      &::before
+       content: ''
+       cursor: pointer
+       display: inline-block
+       width: $height
+       height: $height
+       background-color: white
+       border-radius: 50%
+       box-shadow: 1px 1px 3px rgba(0,0,0,0.5) 
+       transition: all 300ms ease-in-out
+      
+
+    &:checked + .toggle-button
+     background-color: #32db64
+     &::before
+      margin-left: $height
+         
+    
   
-  .ajustesOpcion
-    position: relative
-    top: 60%
-    color: white
-    @media only screen and (min-width: 600px) //Pantallas mas de 600px
-      top: 60%
+
+
 
